# BlindSpot

./: .gitattribute  .gitignore  README.md  TODO.md  package.json  pnpm-lock.yaml
apps/backend/: .env.example  app.py  main.py  pyproject.toml  session_manager.py  test_core.py
apps/backend/api/: deps.py  routes_chat.py
apps/backend/core/: concepts.py  config.py  distance.py  goodfire_client.py  utils.py
apps/backend/explore/: README.md  distance_exploration.ipynb  goodfire_exploration.ipynb  initial_exploration.ipynb  llm_distance_exploration.ipynb
apps/frontend/: package.json  postcss.config.mjs  tailwind.config.ts
apps/frontend/src/__tests__/: difficulty-selector.test.tsx
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/game/: page.tsx
apps/frontend/src/components/assistant-ui/: custom-runtime.tsx  thread.tsx  tooltip-icon-button.tsx
apps/frontend/src/components/game/: chat-window.tsx  counter.tsx  difficulty-selector.tsx  game-content.tsx  guess-panel.tsx  instructions.tsx  message-input.tsx  top-bar.tsx
apps/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
apps/frontend/src/lib/: api.ts  game-context.tsx  types.ts  utils.ts
